--- a/FootballApp/appsettings.json
+++ b/FootballApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "footballAppDBCon": "Server=tcp:footballappserver1.database.windows.net,1433;Initial Catalog=footballAppDB;Persist Security Info=False;User ID=footballappadmin;Password=It02le93;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "footballAppDBCon": "***********************************"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ClientLocalhostPath": "http://localhost:3000"
+  "ClientLocalhostPath": "****************"
 }
